# TimusSolutions

./: .gitattributes  1005.kt  1067.kt  1080.c  1207.cpp  1521.kt  1650.cpp  1650.kt  CMakeLists.txt  README.md
exportToHTML/: 1080.c.html  1162.cpp.html  1296.cpp.html  1450.cpp.html  1650.cpp.html  2025.c.html
